--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 				<ul>
 					<li><a href="inet1650/week4/index.html">Week 4</a></li>
 					<li><a href="inet1650/week5/index.html">Week 5</a></li>
+					<li><a href="inet1650/mid-term/index.html">Midterm</a></li>
 				</ul>
 			</section>
 		</body>
