--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 					<li><a href="inet1650/week4/index.html">Week 4</a></li>
 					<li><a href="inet1650/week5/index.html">Week 5</a></li>
 					<li><a href="inet1650/mid-term/index.html">Midterm</a></li>
+					<li><a href="inet1650/week9/index.html">Week 9</a></li>
 				</ul>
 			</section>
 		</body>
