--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 					<li><a href="inet1650/week5/index.html">Week 5</a></li>
 					<li><a href="inet1650/mid-term/index.html">Midterm</a></li>
 					<li><a href="inet1650/week9/index.html">Week 9</a></li>
+					<li><a href="inet1650/week10/index.html">Week 10</a></li>
 				</ul>
 			</section>
 		</body>
