--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 					<li><a href="inet1650/mid-term/index.html">Midterm</a></li>
 					<li><a href="inet1650/week9/index.html">Week 9</a></li>
 					<li><a href="inet1650/week10/index.html">Week 10</a></li>
+					<li><a href="inet1650/week14/index.html">Week 14</a></li>
 				</ul>
 			</section>
 		</body>
