--- a/inet1650/mid-term/index.html
+++ b/inet1650/mid-term/index.html
@@ -135,7 +135,7 @@
 			
 			div.recipe { font-size: 14px;
 			             font-family: Monospace;
-							 color: lime; } /* all text in under class receipt should be size 14px use font "monospace" and have the color lime */
+							 color: goldenrod; } /* all text in under class receipt should be size 14px use font "monospace" and have the color goldenrod */
 			
 			/* END HERE: The end of your rules */
 			
